--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "moment": "^2.20.1",
+    "moment-range": "^3.1.1",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
